--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,16 +35,19 @@
             <%= yield %>
           </div>
         </div>
-        <!-- MF may add back in<div class="row" id="bottom-trio">
+        <div class="row" id="bottom-trio">
           <div class="span4">
           <h3>Explore StreetSeen</h3>
+          <p> Here would be some text about the about and help pages </p>
           </div>
           <div class="span4">
-          <h3>Get the Code</h3>
+          <h3>See Study Results</h3>
+          <p> Here would be some text about how to view results </p>
           </div>
           <div class="span4">
           <h3>Contact Us</h3>
-          </div> -->
+          <p> Here would be some text on how to reach us with questions </p>
+          </div>
       </div>
 
         </div>
