--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,8 @@
 <!-- select a random study -->
-<% @study = Study.find(:all, :limit => 1, :order => "RANDOM()") %>
+<% @study = Study.find(:all).sample(1) %>
 <!-- select 2 random locations from a random region from a region set within the study -->
-<% @regions = @study[0].region_set.regions.find(:all, :limit => 1, :order => "RANDOM()") %>
-<% @locations = @regions[0].locations.find(:all, :limit => 2, :order => "RANDOM()") %>
+<% @regions = @study[0].region_set.regions.find(:all).sample(1) %>
+<% @locations = @regions[0].locations.find(:all).sample(2) %>
   <div class="display-question">
   <h3>Which image looks <%= @study[0].question %>?</h3>
   </div>  
