--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
     <%= yield(:head) %>
   </head>
   <body >
+    <div class="overlay-corner">
+    <%= image_tag("SS-corner.png", :alt => "Email Us") %>
+    </div>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
