--- a/app/views/notifications/_form.html.erb
+++ b/app/views/notifications/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for(@notification) do |f| %>
   <%= f.error_notification %>
-  <p>Fill in the following information, and we'll email you when StreetSeen is ready to be used!
+  <p>Fill in the following information, and we'll email you when StreetSeen is ready to use!
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.input :email %>
