Dummy admin check to prevent folks from seeing Notifications list, redirects to home instead of notifications path

--- a/app/views/notifications/show.html.erb
+++ b/app/views/notifications/show.html.erb
@@ -11,5 +11,4 @@
 </p>
 
 
-<%= link_to 'Edit', edit_notification_path(@notification) %> |
-<%= link_to 'Back', notifications_path %>
+<%= link_to 'Back', :home %>
