--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,26 +1,26 @@
 <%# #link_to "Home", root_path, :class => 'brand' %>
 <ul class="nav">
-  <li><%= link_to "About", about_path %></li>
-  <li><%= link_to "Public Studies", studies_path %></li>
-  <li><%= link_to "Help", help_path %></li>
-  <li><a href="https://www.coursera.org/course/techcity">Technicity</a>
+  <li><%= link_to t('.about'), about_path %></li>
+  <li><%= link_to t('.public_studies'), studies_path %></li>
+  <li><%= link_to t('.help'), help_path %></li>
+  <li><a href="https://www.coursera.org/course/techcity"><%= t '.technicity' %></a>
 </ul>
 <ul id="usernav" class="nav">
   <% if user_signed_in? %>
     <!-- MF - placeholder -->
-    <li><%= link_to "My Research", studies_path %></li>
+    <li><%= link_to t '.my_research', studies_path %></li>
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
         <%= current_user.email %>
         <b class="caret"></b>
       </a>
       <ul class="dropdown-menu">
-        <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
-        <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+        <li><%= link_to t('.edit_profile'), edit_user_registration_path %></li>
+        <li><%= link_to t('.logout'), destroy_user_session_path, method: :delete %></li>
       </ul>
     </li>
   <% else %>
-    <li><%= link_to "Login", new_user_session_path %></li>
+    <li><%= link_to t('.login'), new_user_session_path %></li>
   <% end %>
 </ul>
 
