--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "StreetSeen" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : t(:site_name) %></title>
     <meta name="description" content="">
     <meta name="author" content="">
     <%= stylesheet_link_tag "application", :media => "all" %>
@@ -20,7 +20,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="home">StreetSeen</a>
+          <a class="brand" href="home"><%= t :site_name %></a>
           <div class="nav-collapse">
             <%= render 'layouts/navigation' %>
           </div>
@@ -37,16 +37,16 @@
         </div>
         <div class="row" id="bottom-trio">
           <div class="span4">
-          <h3>Explore StreetSeen</h3>
-          <p> Here would be some text about the about and help pages </p>
+          <h3><%= t '.trio1.title' %></h3>
+          <p><%= t '.trio1.text' %></p>
           </div>
           <div class="span4">
-          <h3>See Study Results</h3>
-          <p> Here would be some text about how to view results </p>
+          <h3><%= t '.trio2.title' %></h3>
+          <p><%= t '.trio2.text' %></p>
           </div>
           <div class="span4">
-          <h3>Contact Us</h3>
-          <p> Here would be some text on how to reach us with questions </p>
+          <h3><%= t '.trio3.title' %></h3>
+          <p><%= t '.trio3.text' %></p>
           </div>
       </div>
 
