--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,7 +8,7 @@
 <ul id="usernav" class="nav">
   <% if user_signed_in? %>
     <!-- MF - placeholder -->
-    <li><%= link_to t '.my_research', studies_path %></li>
+    <li><%= link_to t('.my_research'), studies_path %></li>
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
         <%= current_user.email %>
