--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,11 +1,10 @@
 <%# #link_to "Home", root_path, :class => 'brand' %>
 <ul class="nav">
   <li><%= link_to t('.about'), about_path %></li>
-  <li><%= link_to t('.public_studies'), studies_path %></li>
   <li><%= link_to t('.help'), help_path %></li>
-  <li><a href="https://www.coursera.org/course/techcity"><%= t '.technicity' %></a>
-</ul>
-<ul id="usernav" class="nav">
+  <li><a href="https://www.coursera.org/course/techcity"><%= t '.technicity' %></a></li>
+  
+  <li><%= link_to t('.public_studies'), studies_path %></li>
   <% if user_signed_in? %>
     <!-- MF - placeholder -->
     <li><%= link_to t('.my_research'), studies_path %></li>
@@ -22,6 +21,7 @@
   <% else %>
     <li><%= link_to t('.login'), new_user_session_path %></li>
   <% end %>
+  
 </ul>
 
 
