--- a/app/views/studies/vote.html.erb
+++ b/app/views/studies/vote.html.erb
@@ -4,27 +4,27 @@
 <!-- select 2 random locations from a random region from a region set within the study -->
 <% @regions = @study.region_set.regions.find(:all).sample(1) %>
 <% @locations = @regions[0].locations.find(:all).sample(2) %>
+<div class="row" id="vote-container">  
   <div class="display-question">
-  <h3>Which image looks <%= @study[0].question %>?</h3>
-  </div>  
-  <div class="voting-table">
-  <table>
-  <tr>
-  <% @locations.each do |location| %>
-    <td class="vote-image">
-      <img src="http://maps.googleapis.com/maps/api/streetview?size=470x306&location=<%= location.latitude %>,%20<%= location.longitude %>&sensor=false" />
-    </td>
-  <% end %>
-  </tr>
-  <tr>
-  <td class="vote-button">
-    <%= button_to "1", new_comparison_path(:chosen_location_id => @locations[0].id, :rejected_location_id => @locations[1].id), :method => :post %>
-  </td>
-   <td class="vote-button">
-    <%= button_to "2", new_comparison_path(:chosen_location_id => @locations[1].id, :rejected_location_id => @locations[0].id), :method => :post %>
-  </td>
-  </tr>
-</table>
+    <h3>Which image looks <%= @study[0].question %>?</h3>
+  </div>
+  <% @imagelink1 = "http://maps.googleapis.com/maps/api/streetview?size=470x306&location=" + @locations[0].latitude.to_s() + "%20" + @locations[0].longitude.to_s() + "&sensor=false" %>
+  <% @imagelink2 = "http://maps.googleapis.com/maps/api/streetview?size=470x306&location=" + @locations[1].latitude.to_s() + "%20" + @locations[1].longitude.to_s() + "&sensor=false" %>
+
+  <div class="vote-image">
+    <%= link_to image_tag("#{@imagelink1}"), comparisons_path(:comparison => {:chosen_location_id => @locations[0].id, :rejected_location_id => @locations[1].id}) , :method => :post %>
+  </div>
+  <div class="vote-image">
+    <%= link_to image_tag("#{@imagelink2}"), comparisons_path(:comparison => {:chosen_location_id => @locations[0].id, :rejected_location_id => @locations[1].id}) , :method => :post %>
+  </div>
+  <div class="row" id="vote-button-container">
+    <div class="span5" id="vote-button">
+      <%= link_to '1', comparisons_path(:comparison => {:chosen_location_id => @locations[0].id, :rejected_location_id => @locations[1].id}) , :method => :post, :class => 'vote-button-text' %>
+    </div>
+    <div class="span5" id="vote-button">
+      <%= link_to '2', comparisons_path(:comparison => {:chosen_location_id => @locations[1].id, :rejected_location_id => @locations[0].id}) , :method => :post, :class => 'vote-button-text' %>
+    </div>
+  </div>
 </div>
 
 
