--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,5 +1,17 @@
 <h1>Help</h1>
 <h2>Create a Study</h2>
+<p>To create a study, you need to have an account and be logged in.  If you're not, <%= link_to "Go set one up or Log in", new_user_session_path %> and then come back.  We'll wait.</p>
+<p>Ok, to create our study we need to first create the question we want to ask, and then select a group of images to compare with each other.  To get started, click on Public Studies above and follow these steps:
+<ol>
+<li>At the bottom of the list of studies, click New Study</li>
+<li>Fill in a name and description</li>
+<li>Fill in the end of the question you'd like to ask in your study</li>
+<li>Click on Create Study.
+<li>Next we want to create an area...</li>
+<li></li>
+<li></li>
+<li></li>
+</ol>
 <h2>Add an Image Set</h2>
 <h2>Edit a Study</h2>
 <h2>View Results</h2>
