Voting with redirect back to origin, accompanying styling, additional stuff for bottom-trio

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,6 @@
-<h1>Technicity</h1>
+<h1>About StreetSeen</h1>
 <h3>License</h3>
-<p>This software is licensed under the GPLv2 license and can be found on github here.</p>
+<p>This software is licensed under the GPLv2 license and can be found on github...as soon as we release it!</p>
 
 <h3>About the Team</h3>
 <p><strong>Dr. Jennifer Evans-Cowley</strong> is the Associate Dean for Academic Affairs and 
@@ -13,15 +13,16 @@ teaching, advising, and research. Cowley publishes and speaks widely on technolo
 and the future of the city. You can follow Dr. Evans-Cowley on Twitter @EvansCowley.</p> 
 <p><strong>Jason Little</strong> is the  Systems Engineer,  Engineering Computing Services 
 in the College of Engineering at the The Ohio State University.  He serves as the 
-technical lead for centralized web development within the College ...needs more</p>
+technical lead for centralized web development within the College and is also pursuing his MBA 
+at the Fisher College of Business</p>
 <p><strong>Meghan Frazer</strong> is the Digital Resources Curator for the 
 Knowlton School of Architecture at The Ohio State University.  She manages the 
 school archives, the KSA Digital Library, and supports educational technology 
 efforts by working on projects like StreetSeen.  Her professional interests include 
 digital content preservation and data visualization. You can send tweets in her 
 direction using @meghanfrazer.</p>
-<p><strong>Shaun Rowland</strong> ...needs bio</p>
-<p><strong>Corey Hinshaw</strong> ...needs bio</p>
+<p><strong>Shaun Rowland</strong> bio coming soon</p>
+<p><strong>Corey Hinshaw</strong> bio coming soon</p>
 
 
 <h3>Credits</h3>
