--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -42,12 +42,12 @@ body {
     color: $darkgray;
     text-align: center;
     @include rounded-corners;
-    height: 200px;
+    height: 400px;
     p {
       padding: 10px;
       }
   }
-  padding-top: 100px;
+  padding-top: 40px;
 }
 
 #vote-button {
@@ -62,6 +62,11 @@ body {
   font-size: 48px;
   position: relative;
   top: 36px;
+  }
+  
+a:hover, a:focus {
+  text-decoration: none;
+  color: $gray;
   }
 
 #vote-container {
