--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-              <a class="brand" href="home"><%= image_tag("SS-banner-sized.png", :alt => "StreetSeen") %></a>
+              <a class="brand" href="<%= :home %>"><%= image_tag("SS-banner-sized.png", :alt => "StreetSeen") %></a>
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -49,6 +49,7 @@
           </div>
           <div class="span4">
           <h3><%= t '.trio2.title' %></h3>
+          <%= link_to image_tag("FinalPerspective.jpg", :alt => "TechniCity on Coursera"), "https://www.coursera.org/course/techcity" %>
           <p><%= t '.trio2.text' %></p>
           </div>
           <div class="span4">
