--- a/app/views/studies/vote.html.erb
+++ b/app/views/studies/vote.html.erb
@@ -6,7 +6,7 @@
 <% @locations = @regions[0].locations.find(:all).sample(2) %>
 <div class="row" id="vote-container">  
   <div class="display-question">
-    <h3>Which image looks <%= @study[0].question %>?</h3>
+    <h3>Which image looks <%= @study.question %>?</h3>
   </div>
   <% @imagelink1 = "http://maps.googleapis.com/maps/api/streetview?size=470x306&location=" + @locations[0].latitude.to_s() + "%20" + @locations[0].longitude.to_s() + "&sensor=false" %>
   <% @imagelink2 = "http://maps.googleapis.com/maps/api/streetview?size=470x306&location=" + @locations[1].latitude.to_s() + "%20" + @locations[1].longitude.to_s() + "&sensor=false" %>
