--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <div class="nav-collapse">
+          <div class="nav-collapse" style="padding-right: 210px;">
             <%= render 'layouts/navigation' %>
           </div>
         </div>
