Jennifer's text changes

--- a/app/views/notifications/_form.html.erb
+++ b/app/views/notifications/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for(@notification) do |f| %>
   <%= f.error_notification %>
-  <p>Fill in the following information, and we'll email you when StreetSeen is ready to use!
+  <p>Fill in the following information, and we'll notify you when StreetSeen is ready 
+  to use!  StreetSeen is expected to be available in May.</p>
   <div class="form-inputs">
     <%= f.input :name %>
     <%= f.input :email %>
