--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,28 @@
 <h1>About StreetSeen</h1>
+<p>StreetSeen hopes to quantitatively understand different perceptions of streets. Most 
+of us experience our cities along its streets. We walk along the sidewalks, bicycle or 
+drive along the streets and ultimately explore our cities via these transportation networks.</p>
+
+<p>Google Streetview allows people to explore places across the world through 360-degree 
+street-level images. Google Streetview provides a great opportunity to study and 
+understand our cities. StreetSeen is a project from Ohio State University which extends 
+Google Streetview in order to allow people across the globe to experiment in evaluating cities.</p>
+
+<p>Visual preference surveys provide the opportunity to see what people think about 
+different places. Visual preferences surveys, originated by Anton Tony Nelessen in the 
+1970s, typically ask participants to view a series of images and score them based on 
+their preference. The best visual preference surveys are precise in what they are seeking 
+to measure. For example, making sure that all of the images are viewed from the same angle.</p>
+
+<p>The great thing about Google Streetview is that the images are 360 degrees making 
+it fairly simply to rotate images to achieve the same perspective. These are realistic 
+images of what cities are really like. They aren’t doctored fancy pictures. These are 
+quite similar to what you would see if you were exploring a city.</p>
+
+<p>Using the ideas from visual preference surveys constructed into pairwise surveys 
+we have created an easy to use tool that let’s anyone construct their own survey and 
+begin to understand what people think about places in cities across the world.</p>
+
 <h3>License</h3>
 <p>This software is licensed under the GPLv2 license and can be found on github...as soon as we release it!</p>
 
@@ -10,7 +34,8 @@ interests in technology that can help the public engage in participatory plannin
 for the future of cities. She was named by Planetizen as one of the top 25 leading 
 thinkers in urban planning and technology. She has won numerous awards for her 
 teaching, advising, and research. Cowley publishes and speaks widely on technology 
-and the future of the city. You can follow Dr. Evans-Cowley on Twitter @EvansCowley.</p> 
+and the future of the city. You can follow Dr. Evans-Cowley on Twitter 
+<a href="http://www.twitter.com/evanscowley">@EvansCowley</a>.</p> 
 <p><strong>Jason Little</strong> is the  Systems Engineer,  Engineering Computing Services 
 in the College of Engineering at the The Ohio State University.  He serves as the 
 technical lead for centralized web development within the College and is also pursuing his MBA 
@@ -20,11 +45,16 @@ Knowlton School of Architecture at The Ohio State University.  She manages the
 school archives, the KSA Digital Library, and supports educational technology 
 efforts by working on projects like StreetSeen.  Her professional interests include 
 digital content preservation and data visualization. You can send tweets in her 
-direction using @meghanfrazer.</p>
+direction using <a href="http://www.twitter.com/meghanfrazer">@meghanfrazer</a>.</p>
 <p><strong>Shaun Rowland</strong> bio coming soon</p>
 <p><strong>Corey Hinshaw</strong> bio coming soon</p>
 
 
 <h3>Credits</h3>
-<p>Mooculus code</p>
+<p>This project is based on the great work of Open Plans <a href="http://www.beautiful.st/">
+Beautiful Street Project</a> and MIT’s Media Lab <a href="http://pulse.media.mit.edu/">Place 
+Pulse Project</a>. Both of these open source projects provided their 
+code on GitHub and served as a foundation for the design of StreetSeen. </p>
+<p>In addition, the <a href="https://mooculus.osu.edu/">Mooculus</a> site, developed by 
+Jim Fowler of The Ohio State University, provided key reference for this project.</p>
 
