Re-organized voting markup and tweaked styles for better rendering on limited-wdith screens.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -41,26 +41,32 @@ body {
     border: 1px;
     color: $darkgray;
     @include rounded-corners;
-    height: 340px;
+    margin-top: 40px;
+    padding-bottom: 6px;
+    height: 380px;
     p {
       padding: 10px 20px 0 20px;
       }
     a {
       color: $darkred;
       }
-    img {
+    h3 {
+      margin-bottom: 18px;
+      }
+    .ss-icon {
       position: relative;
       float: left;
       }
   }
-  padding-top: 40px;
+  padding-bottom: 30px;
 }
 
-#vote-button {
+.vote-button {
   background: url('SS-vote-btn.png') no-repeat center;
   height: 100px;
   position:relative;
   text-align: center;
+  margin: -25px 0 0 0;
   }
   
 .vote-button-text {
@@ -75,33 +81,21 @@ a:hover, a:focus {
   color: $gray;
   }
 
-#vote-container {
- text-align: center;
- margin-top: 20px;
- margin-left: 10px;
- .skip-vote-row a {
-   color: $darkred;
-   }
- }
- 
-#vote-button-container {
-   margin: -25px 0 0 0;
-   padding-left: 60px;
- }
- 
+#display-question {
+  margin-top: 20px;
+  }
+
+.skip-vote-row a {
+  color: $darkred;
+  }
 
 .vote-image {
   display: inline;
-  padding: 20px;
   img {
     position: relative;
     padding-top: 20px;
     }
   }
-
-.display-question {
-  text-align: center;
-}
 
 .overlay-corner {
   position: absolute;
@@ -119,6 +113,12 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 #main {
   padding-top: 50px;
   }
+
+@media (max-width: 990px) {
+  #main{
+    padding-top: 0;
+    }
+}
 
 .overlay-logo {
   .span3 {
@@ -144,7 +144,9 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
   }
 
 .TC-icon {
-    margin: 10px 36px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   }
 
 @import "bootstrap-responsive";
