--- a/app/views/layouts/_bottom_trio.html.erb
+++ b/app/views/layouts/_bottom_trio.html.erb
@@ -1,5 +1,5 @@
 <div class="span4">
-  <a class="brand" href="<%= :home %>"><%= image_tag("SS-icon-sm.png", :alt => "StreetSeen") %></a>
+  <a class="brand" href="<%= :home %>"><%= image_tag("SS-icon-sm.png", :alt => "", :class => 'ss-icon') %></a>
   <h3><%= t '.trio1.title' %></h3>
   <p>This the demo version of StreetSeen v.1.0.  Currently, you can vote on existing 
   test studies by selecting one of the images above.  Soon, you'll be able to create your own studies and
@@ -7,7 +7,7 @@
   <p><%= link_to "Click here", :notify %> to receive email notification when the site is live</p>
 </div>
 <div class="span4">
-  <a class="brand" href="<%= :home %>"><%= image_tag("SS-icon-sm.png", :alt => "StreetSeen") %></a>
+  <a class="brand" href="<%= :home %>"><%= image_tag("SS-icon-sm.png", :alt => "", :class => 'ss-icon') %></a>
   <h3><%= t '.trio2.title' %></h3>
   <%= link_to image_tag("FinalPerspective.jpg", :alt => "TechniCity on Coursera", :class => 'TC-icon'), "https://www.coursera.org/course/techcity" %>
   <p>This app was born to support <a href="https://www.coursera.org/course/techcity">TechniCity</a>, a Coursera course taught by Jennifer Evans-Cowley and 
@@ -15,7 +15,7 @@
     </p>
 </div>
 <div class="span4">
-  <a class="brand" href="<%= :home %>"><%= image_tag("SS-icon-sm.png", :alt => "StreetSeen") %></a>
+  <a class="brand" href="<%= :home %>"><%= image_tag("SS-icon-sm.png", :alt => "", :class => 'ss-icon') %></a>
   <h3><%= t '.trio3.title' %></h3>
   <p>Welcome to StreetSeen.  Let us know what you think!</p>
   <p><a href="http://www.twitter.com/osustreetseen">Tweet @OSUStreetSeen</a> or <a href="mailto:cowley.11@osu.edu">email us</a>. The 
