Adjusted logo and corner banner sizes at smaller browser widths.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -139,6 +139,15 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
   margin-left: 4px;
   }
 
+@media (max-width: 767px) {
+  .navbar .brand{
+    width: 150px;
+    }
+  .overlay-corner{
+    width: 200px;
+    }
+}
+
 .navbar-fixed-top, .navbar-fixed-bottom {
   position: absolute;
   }
