--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,8 +3,8 @@
   <li><%= link_to t('.about'), about_path %></li>
   <li><%= link_to t('.help'), help_path %></li>
   <li><a href="https://www.coursera.org/course/techcity"><%= t '.technicity' %></a></li>
-  <!--  
-  <li><%= link_to t('.public_studies'), studies_path %></li>
+
+  <!-- <li><%= link_to t('.public_studies'), studies_path %></li> -->
   <% if user_signed_in? %>
     <li><%= link_to t('.my_research'), studies_path %></li>
     <li class="dropdown">
@@ -20,14 +20,13 @@
   <% else %>
     <li><%= link_to t('.login'), new_user_session_path %></li>
   <% end %>
-  --> 
 </ul>
 
 
 
-<!-- OLD 
+<!-- OLD
   <li class="dropdown">
-    <a href="/dashboard" class="dropdown-toggle" data-toggle="dropdown">Public Studies 
+    <a href="/dashboard" class="dropdown-toggle" data-toggle="dropdown">Public Studies
     <b class="caret"></b></a>
     <ul class="dropdown-menu">
       <li><a href="/dashboard">Dashboard</a></li>
@@ -42,7 +41,7 @@
     </li>
   <% end %>
 
-  
+
 </ul>
 <%= link_to "Sign up", new_user_registration_path %>
 -->
