--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <%= stylesheet_link_tag "application", :media => "all" %>
-    <%= javascript_include_tag 'http://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=false' %>
+    <%= javascript_include_tag 'http://maps.googleapis.com/maps/api/js?libraries=geometry,streetview&sensor=false' %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -34,7 +34,7 @@
     <%= link_to image_tag("SS-corner.png", :alt => "Email Us"), :notify %>
     </div>
     <div id="main" role="main">
-    
+
       <div class="container">
         <div class="row">
           <div class="span12">
