--- a/app/views/comparisons/index.html.erb
+++ b/app/views/comparisons/index.html.erb
@@ -15,6 +15,7 @@
     <td><%= comparison.chosen_location_id %></td>
     <td><%= comparison.rejected_location_id %></td>
     <td><%= comparison.remote_ip %></td>
+    <td><%= comparison.study_id %></td>
     <td><%= link_to 'Show', comparison %></td>
     <td><%= link_to 'Edit', edit_comparison_path(comparison) %></td>
     <td><%= link_to 'Destroy', comparison, method: :delete, data: { confirm: 'Are you sure?' } %></td>
